telaInicial & telaConteudo1 em html

--- a/telaConteudo1.html
+++ b/telaConteudo1.html
@@ -8,10 +8,10 @@
 <body>
     <header>
         <div>
-            <button> <img src="img/Abelardo_vulgoBeicola86x86.jpg" alt="acessar perfil"> </button>
-            <button>Abelardo</button>
-            <button> <img src="img/Chronos.png" alt="acessar Home"> </button>
-            <button>Home</button>
+            <a href=""> <img src="img/Abelardo_vulgoBeicola86x86.jpg" alt="acessar perfil"> </a>
+            <a href="">Abelardo</a>
+            <a href="telaInicial.html"> <img src="img/Chronos.png" alt="acessar Home"> </a>
+            <a href="telaInicial.html">Home</a>
             <button> <img src="img/lupaPesq60x60.png" alt="botao de pesquisa"> </button>
             <input type="text" placeholder="Buscar...">  <!-- input cria um espaço para entrada de dados do user (type é o tipo de dado e placeholder um texto para direcionamento) -->
             <div>
