--- a/telaConteudo1.html
+++ b/telaConteudo1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tela Conteudo</title>
+    <title>Tela Conteudo: História e historiografia</title>
 </head>
 <body>
     <header>
