--- a/telaInicial.html
+++ b/telaInicial.html
@@ -48,18 +48,18 @@
             </a>
         </div>
         <div>
-            <a href="">
+            <a href="telaConteudo2.html">
                 <img src="">
                 <div>
                     <span>Sociedade e Cultura</span>
                     <span>56min</span>
                 </div>
-                <h3>Das Sociedades Antigas às Complexas</h3>
+                <h3>Das Sociedades Primitivas às Complexas</h3>
                 <p>Estuda as origens e a evolução do ser humano, desde os primeiros hominídeos até as sociedades que começaram a dominar o ambiente à sua volta. Aborda como os grupos humanos passaram da caça e coleta à agricultura e pecuária, com a Revolução Neolítica, marcando o início da sedentarização, do surgimento das primeiras aldeias e das desigualdades sociais que ainda nos acompanham.</p>
             </a>
         </div>
         <div>
-            <a href="">
+            <a href="telaConteudo3.html">
                 <img src="">
                 <div>
                     <span>Sociedade e Cultura</span>
