telaInicial & telasConteudo & telaErro

--- a/telaInicial.html
+++ b/telaInicial.html
@@ -93,7 +93,9 @@
                 <button>Exibir mais</button>
             </div>
         </div>
-        <button>Obter Acesso Ilimitado</button>
+        <a href="erro.html">
+            <button>Obter Acesso Ilimitado</button>
+        </a>
     </main>
 
     <footer>
