--- a/telaInicial.html
+++ b/telaInicial.html
@@ -15,7 +15,9 @@
             <button> <img src="img/lupaPesq60x60.png" alt="botao de pesquisa"> </button>
             <input type="text" placeholder="Buscar...">  <!-- input cria um espaço para entrada de dados do user (type é o tipo de dado e placeholder um texto para direcionamento) -->
             <div>
-                <button>Sair</button>
+                <a href="telaLogin.html">
+                    <button>Sair</button>
+                </a>
             </div>
         </div>
     </header>
