telaLogin & telaCadastro & telaInicial & telasConteudo & telaErro HTML

--- a/telaCadastro.html
+++ b/telaCadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tela de login</title>
+    <title>tela de Cadastro</title>
 </head>
 <body>
     <header>
@@ -15,23 +15,28 @@
     <main>
         <div>
             <div>
-                <h2>Usuario:</h2>
+                <h2>Nome Usuario:</h2>
                 <input type="text" placeholder="nome...">
+            </div>
+            <div>
+                <h2>Email:</h2>
+                <input type="text" placeholder="nome@mail.com">
+            </div>
+            <div>
+                <h2>Telefone:</h2>
+                <input type="text" placeholder="(99) 99999-9999">
             </div>
             <div>
                 <h2>Senha:</h2>
                 <input type="password" placeholder="***...">
             </div>
             <a href="telaInicial.html">
-                <button>ENTRAR</button>
+                <button>CADASTRAR-SE</button>
             </a>
         </div>
-        <div>
-            <span>Novo no Chronos?</span>
-            <a href="telaCadastro.html">
-                <span>Clique aqui</span>
-            </a>
-        </div>
+        <a href="telaLogin.html">
+            <button>Voltar</button>
+        </a>
     </main>
 
     <footer>
