--- a/telaConteudo1.html
+++ b/telaConteudo1.html
@@ -36,7 +36,9 @@
 
         <p>Também é fundamental entender que o conhecimento histórico está sempre em construção. A chamada verdade histórica muda com o tempo, à medida que novas fontes são descobertas ou novas interpretações surgem. A História não pertence apenas aos vencedores, mas a todos os sujeitos históricos (como povos indígenas, trabalhadores, mulheres e jovens) que participaram das transformações sociais.</p>
         
-        <button>Explorar mais assuntos</button>
+        <a href="telaInicial.html">
+            <button>Explorar mais assuntos</button>
+        </a>
     </main>
     <footer>
         <img src="img/IFRNlogo175x81.jpg" alt="logo Instituto Federal do Rio Grande do Norte - Santa Cruz">
