--- a/telaConteudo2.html
+++ b/telaConteudo2.html
@@ -36,7 +36,9 @@
 
         <p>Nesse contexto, nasceram os primeiros estados e as primeiras civilizações.Essa jornada, desde as bandas nômades até os primeiros centros urbanos e estados organizados, ilustra a notável capacidade humana de inovar e adaptar suas estruturas sociais em resposta a novos desafios e oportunidades.</p>
         
-        <button>Explorar mais assuntos</button>
+        <a href="telaInicial.html">
+            <button>Explorar mais assuntos</button>
+        </a>
     </main>
     <footer>
         <img src="img/IFRNlogo175x81.jpg" alt="logo Instituto Federal do Rio Grande do Norte - Santa Cruz">
