--- a/telaConteudo3.html
+++ b/telaConteudo3.html
@@ -39,7 +39,9 @@
 
         <p>Na mesma época, surgiram as Reformas Religiosas, movimentos que contestaram a autoridade da Igreja Católica e abriram caminho para diferentes formas de religiosidade cristã, como o protestantismo. A fé e a ciência passaram a coexistir e disputar espaços de influência no pensamento ocidental, ampliando o leque de visões de mundo e práticas culturais.</p>
         
-        <button>Explorar mais assuntos</button>
+        <a href="telaInicial.html">
+            <button>Explorar mais assuntos</button>
+        </a>
     </main>
     <footer>
         <img src="img/IFRNlogo175x81.jpg" alt="logo Instituto Federal do Rio Grande do Norte - Santa Cruz">
