telaLoginHTML & telaCadastroHTML & telasConteudoHTML&CSS & telaErroHTML

--- a/telaCadastro.html
+++ b/telaCadastro.html
@@ -41,8 +41,7 @@
 
     <footer>
         <img src="img/IFRNlogo175x81.jpg" alt="logo Instituto Federal do Rio Grande do Norte - Santa Cruz">
-        <span>Trabalho Autoria Web - Prof. Marcelo Figueiredo Barbosa Júnior</span>
-        <span>Atson Felipoo Costa Lopes, Hugo Fonseca Galvão, João Victor de Carvalho Araújo, Joatan Fernandes Vieira Neto</span>
+        <p>Trabalho Autoria Web - Prof. Marcelo Figueiredo Barbosa Júnior<br>Atson Felipoo Costa Lopes, Hugo Fonseca Galvão, João Victor de Carvalho Araújo, Joatan Fernandes Vieira Neto</p>
         <button>Mais detalhes</button>
     </footer>
 </body>
