--- a/telaConteudo2.html
+++ b/telaConteudo2.html
@@ -3,22 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="telasConteudo.css">
+
     <title>Tela Conteudo: Das Sociedades Primitivas às Complexas</title>
 </head>
 <body>
     <header>
         <div>
-            <a href=""> <img src="img/Abelardo_vulgoBeicola86x86.jpg" alt="acessar perfil"> </a>
-            <a href="">Abelardo</a>
-            <a href="telaInicial.html"> <img src="img/Chronos.png" alt="acessar Home"> </a>
-            <a href="telaInicial.html">Home</a>
+            <a href=""> 
+                <img src="img/Abelardo_vulgoBeicola86x86.jpg" alt="acessar perfil"> 
+                <span>Abelardo</span>
+            </a>
+            <a href="telaInicial.html"> 
+                <img src="img/Chronos.png" alt="acessar Home">
+                <span>Home</span>
+            </a>
             <button> <img src="img/lupaPesq60x60.png" alt="botao de pesquisa"> </button>
             <input type="text" placeholder="Buscar...">  <!-- input cria um espaço para entrada de dados do user (type é o tipo de dado e placeholder um texto para direcionamento) -->
-            <div>
-                <a href="telaLogin.html">
-                    <button>Sair</button>
-                </a>
-            </div>
+            <a href="telaLogin.html">
+                <span>Sair</span>
+            </a>
         </div>
     </header>
     <main>
@@ -42,8 +47,7 @@
     </main>
     <footer>
         <img src="img/IFRNlogo175x81.jpg" alt="logo Instituto Federal do Rio Grande do Norte - Santa Cruz">
-        <span>Trabalho Autoria Web - Prof. Marcelo Figueiredo Barbosa Júnior</span>
-        <span>Atson Felipoo Costa Lopes, Hugo Fonseca Galvão, João Victor de Carvalho Araújo, Joatan Fernandes Vieira Neto</span>
+        <p>Trabalho Autoria Web - Prof. Marcelo Figueiredo Barbosa Júnior<br>Atson Felipoo Costa Lopes, Hugo Fonseca Galvão, João Victor de Carvalho Araújo, Joatan Fernandes Vieira Neto</p>
         <button>Mais detalhes</button>
     </footer>
 </body>
